@@ -261,6 +261,8 @@ ai_worker_requirement_percent = 150
 ; creates a serious problem for long paths because reconstruction works from the end of the path toward the start, so stopping early produces an
 ; incorrect path that begins in the middle. The fix is simply to multiply the maximum length by 10 (to 2560). Removing the limit entirely risks
 ; allowing infinite loops. This bug is rarely visible in-game, it usually appears as AI naval units following inappropriate or invalid paths.
+;   ZERO PRODUCTION CRASH -- If a city has zero production, which is possible using specialists modded to produce negative shields, the game will
+; crash due to a division by zero.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -275,6 +277,7 @@ patch_disease_stopping_tech_flag_bug = false
 patch_division_by_zero_in_ai_alliance_eval = true
 patch_empty_army_movement = true
 patch_premature_truncation_of_found_paths = true
+patch_zero_production_crash = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
