@@ -3,6 +3,7 @@
   - Controlled by config option enable_caravan_unit_ai
 - Delete any AI units that somehow end up off the map to fix a rare crash, setting named delete_off_map_ai_units
 - Fix pathfinder bug (see config for details), setting named patch_premature_truncation_of_found_paths
+- Fix crash due to division by zero when cities have zero production, setting named patch_zero_production_crash
 - Fix icons for different kinds of specialist yields obscuring each other, setting named fix_overlapping_specialist_yield_icons
 - Correct typo in name of share_visibility_in_hotseat setting. The old, incorrect name still works as an alias.
 
